<resources>
    <string name="app_name">税刊阅读</string>
    <string name="action_settings">Settings</string>
    <string name="splash_text">税刊阅读</string>
    <string name="login_register">登录/注册</string>
    <string name="user_mail_phone">用户名/邮箱/手机</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="title_activity_x_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
