<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splashback">

    <include
        layout="@layout/layout_title"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="76dp"
        android:adjustViewBounds="true"
        android:background="@drawable/logo"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/back_home"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="15dp"
        android:background="@null"
        android:src="@drawable/backwhite" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="76dp"
        android:adjustViewBounds="true"
        android:text="中国税务杂志社"
        android:textColor="@color/ffffff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/splash_text"
        android:textColor="#ccd0ff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/login_register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="220dp"
        android:text="@string/login_register"
        android:textColor="@color/ffffff"
        android:textSize="60px" />

    <RelativeLayout
        android:id="@+id/login_back_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="270dp"
        android:background="@drawable/loginback_shape"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:id="@+id/user_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_user_shape"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/user" />

            <EditText
                android:id="@+id/user_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="14sp"
                android:background="@null"
                android:hint="@string/user_mail_phone"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/user_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_user_shape"
            android:orientation="horizontal"
            android:singleLine="true">

            <ImageView
                android:id="@+id/pass_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/password" />

            <EditText
                android:id="@+id/pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="14sp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/is_loging_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass_layout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/is_loging_lilayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/is_loging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/check_mark02" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/is_loging"
                    android:text="记住登录"
                    android:textColor="@color/Button_login"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="忘记密码"
                android:textColor="@color/Button_login"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/is_loging_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_login_button_shape"
            android:text="@string/login"
            android:textColor="@color/ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/qqtopline_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_but"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:id="@+id/login_viewline1"
                android:layout_width="340px"
                android:layout_height="2dp"
                android:background="@color/qqtopview"
                android:gravity="center" />

            <TextView
                android:id="@+id/login_viewline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/ffffff"
                android:gravity="center"
                android:text="其他登录方式" />

            <View
                android:id="@+id/login_viewline3"
                android:layout_width="340px"
                android:layout_height="2dp"
                android:background="@color/qqtopview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qqtopline_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/qq_but"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/qq" />

            <ImageButton
                android:id="@+id/weixin_but"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/weixin" />

            <ImageButton
                android:id="@+id/weibo_but"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:src="@drawable/weibo" />
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/register_but"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_register_button_shape"
        android:text="@string/register"
        android:textColor="@color/ffffff"
        android:textSize="20sp" />

</RelativeLayout>